--- a/cv/style.css
+++ b/cv/style.css
@@ -6,3 +6,8 @@
 .left{
   width:30%;
   background-color:green;
+  float:left;}
+.right{
+  width:70%;
+  background-color:lightgray;
+  float:right;}
