--- a/cv/style.css
+++ b/cv/style.css
@@ -1,13 +1,17 @@
 #header{
   width:100%;
   height:80px;
-  background-color:yellow;}
+  background-color:yellow;
+}
 
 .left{
   width:30%;
   background-color:green;
-  float:left;}
+  float:left;
+}
+
 .right{
   width:70%;
   background-color:lightgray;
-  float:right;}
+  float:right;
+}
