--- a/cv/style.css
+++ b/cv/style.css
@@ -3,7 +3,7 @@
   height:80px;
   background-color:yellow;
   text-align:center;
-  font-style:Fantasy;
+  font-family:Fantasy;
 }
 
 .left, .right{
