--- a/cv/style.css
+++ b/cv/style.css
@@ -3,8 +3,8 @@
   height:80px;
   background-color:yellow;
   text-align:center;
-  font-family:Fantasy;
-  font-color:yellow;
+  font-family:Arial;
+  font-color:blue;
 }
 
 .left, .right{
