--- a/cv/style.css
+++ b/cv/style.css
@@ -22,9 +22,9 @@
   background-color:lightgray;
   float:right;
 }
-{@media screen and (max-width: 600px){
-  ,left, .right{
-    width:100%
+{@media screen and (max-width: 600px)
+  ,left, .right
+    width:100%;
 
 
 }
