--- a/cv/style.css
+++ b/cv/style.css
@@ -22,7 +22,8 @@
   background-color:lightgray;
   float:right;
 }
-{@media screen and (max-width: 600px){
+{
+  @media screen and (max-width: 600px){
   .left, .right{
     width:100%;
 
