--- a/cv/style.css
+++ b/cv/style.css
@@ -4,9 +4,9 @@
   background-color:yellow;
   text-align:center;
   font-family:Arial;
-  color:red;
+  color:green;
 }
-ol{border:solid:5px
+ol{border:solid 5px
 
 
 }
