--- a/cv/style.css
+++ b/cv/style.css
@@ -1,13 +1,13 @@
 #header{
   width:100%;
-  height:188px;
+  height:80px;
   background-color:yellow;
   text-align:center;
-  font-family:Arial;
+  font-family:Bernard MT Condensed;
   color:green;
+  font-size:120px;
 }
-ol{border:5px solid
-  color:blue
+
 
 
 }
