--- a/cv/style.css
+++ b/cv/style.css
@@ -3,7 +3,7 @@
   height:80px;
   background-color:yellow;
   text-align:center;
-  font-family:Bernard MT Condensed;
+  font-family:Bernard MT;
   color:green;
   font-size:70px;
 }
