--- a/cv/style.css
+++ b/cv/style.css
@@ -3,9 +3,9 @@
   height:80px;
   background-color:yellow;
   text-align:center;
-  font-family:Bernard MT;
+  font-family:Arial;
   color:green;
-  font-size:70px;
+  font-size:50px;
 }
 
 
