--- a/cv/style.css
+++ b/cv/style.css
@@ -3,7 +3,7 @@
   height:110px;
   background-color:yellow;
   text-align:center;
-  font-family:Arial;
+  font-family:Bernard MT Condensed;
   color:green;
   font-size:50px;
 }
