--- a/cv/style.css
+++ b/cv/style.css
@@ -1,7 +1,7 @@
 #header{
   width:100%;
   height:110px;
-  background-color:yellow;
+  background-color:blue;
   text-align:center;
   font-family:Bernard MT Condensed;
   color:green;
@@ -18,7 +18,7 @@
 
 .left{
   width:30%;
-  background-color:green;
+  background-color:lightblue;
   float:left;
 }
 
