--- a/cv/style.css
+++ b/cv/style.css
@@ -4,7 +4,7 @@
   background-color:blue;
   text-align:center;
   font-family:Bernard MT Condensed;
-  color:green;
+  color:white;
   font-size:50px;
 }
 
